fix: TT-258 수정된 convention에 맞게 stt dto 수정
- 기존의 형식이 아닌 문단 수정용 dto와 동일하게 재작성
- 문장 및 문단의 status를 단순 수정 유무 판단이 아니라 3가지 status(realtime,expectedtime, real+expectedtime)으로 구분
- stt 처리과정에서 음성파일에 음성이 들어가있지 않은 경우의 파일에 대한 오류가 있어서 이에대한 예외처리 코드 추가함